# fastruct

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
fastruct/: __main__.py  config_db.py  main.py
fastruct/analysis/foundations/: bi_direction.py  one_direction.py
fastruct/analysis/foundations/tests/: test_one_direction.py
fastruct/analysis/interaction/: interaction_2d.py  interaction_3d.py
fastruct/analysis/interaction/tests/: test_interaction_2d.py
fastruct/commands/: foundations.py  loads.py  utils.py
fastruct/commands/analysis/: app.py  functions.py
fastruct/commands/beams/: app.py  utils.py
fastruct/commands/foundations/: app.py  utils.py
fastruct/commands/loads/: app.py
fastruct/commands/projects/: app.py
fastruct/common/: decorators.py  functions.py
fastruct/design/foundations/: design.py
fastruct/foundations/: analysis.py  design.py  tables.py
fastruct/foundations/analysis/: bi_direction.py  one_direction.py
fastruct/loads/: queries.py
fastruct/models/: __init__.py  beam.py  foundation.py  load.py  project.py  seal_load.py  user_load.py
fastruct/models/tests/: fixtures.py  test_beam.py  test_foundation.py  test_fundacion.py  test_project.py
fastruct/plotting/: curve2d.py  utils.py
fastruct/plotting/foundations/: plot.py
fastruct/projects/: tables.py
fastruct/queries/: loads.py
fastruct/tables/: pagination.py
fastruct/tables/foundations/: analize.py  get.py  get_loads.py  tables.py
